--- a/Game2048/index.html
+++ b/Game2048/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" 
         content="width=device-width,height=decive-height,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
-    <title>2048</title>
+    <title>Way to CTO</title>
     <link rel="stylesheet" type="text/css" href="2048.css">
 
     <script type="text/javascript" src="jquery.min.js"></script>
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div><h1>2048</h1></div>
+        <div><h1>Way to CTO</h1></div>
         <div>
             <p>score: <span id="score">0</span></p>
             <a href="javascript:newgame();" id="newgame-button">New Game</a>
